--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -3,12 +3,12 @@ body {
 }
 
 h1 {
-  font-size: 32pt;
-  text-align: center;
+  font-size: 64pt;
+  text-align: left;
 }
 
 img {
-  border: 2px solid green; 
+  border: 12px solid green; 
 }
 
 div.flash {
